carbrand scrollbar test

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,10 +9,12 @@ import LatestNews from "../components/LatestNews.astro";
 import WhyChooseUs from "../components/WhyChooseUs.astro";
 import Reviews from "../components/Reviews.astro";
 import FAQ from "../components/FAQ.astro";
+import Brands from "../components/Brands.astro";
 ---
 
 <PageLayout>
   <Hero />
+  <Brands />
   <FeaturedCars />
   <ServicesAndFeatures />
   <WhyChooseUs />
