--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -2,8 +2,38 @@
 import TextInput from "./Inputs/TextInput.astro";
 ---
 
-<div>
-  <div class="flex flex-col justify-center items-center">
+<div class="flex flex-row">
+  <div class="flex flex-col w-1/2 p-6 my-6">
+    <div>
+      <h2 class="text-center font-semibold text-3xl mb-6">
+        You can contact us here
+      </h2>
+      <div class="flex flex-row justify-evenly text-lg">
+        <div>
+          <ul>
+            <li>Phone number</li>
+            <li>Phone number</li>
+            <li>Email</li>
+            <li>Address</li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li>Instagram</li>
+            <li>Facebook</li>
+            <li>LinkedIn</li>
+            <li>Facebook</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div
+      class="flex justify-center items-center align-middle h-full w-full bg-gray-200"
+    >
+      <p class="font-light">GOOGLE MAPS PLACEHOLDER</p>
+    </div>
+  </div>
+  <div class="flex flex-col w-1/2 justify-center items-center">
     <form
       class="flex flex-col gap-4 rounded-sm border p-6 my-6 shadow-2xl"
       action=""
