--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import WhyChooseUs from "../components/WhyChooseUs.astro";
 import Reviews from "../components/Reviews.astro";
 import FAQ from "../components/FAQ.astro";
 import Brands from "../components/Brands.astro";
+import "@egjs/preact-flicking/dist/flicking.css";
 ---
 
 <PageLayout>
@@ -18,6 +19,7 @@ import Brands from "../components/Brands.astro";
   <FeaturedCars />
   <ServicesAndFeatures />
   <WhyChooseUs />
+  <Reviews />
   <AboutUs />
   <LatestNews />
   <FAQ />
