--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -9,7 +9,7 @@ const isReverse =
     : "md:flex-row-reverse";
 ---
 
-<div class=`flex ${isReverse} flex-col items-center p-6`>
+<div class=`flex ${isReverse} flex-col items-center p-6 mt-6`>
   <div class="p-6 hidden md:block">
     <img
       src={about.data.thumbnail.image}
