--- a/src/components/Cards/NewsCard.astro
+++ b/src/components/Cards/NewsCard.astro
@@ -24,7 +24,7 @@ const { card } = Astro.props;
     <div class="flex flex-row px-4 pb-2 justify-between">
       <a
         class="border-b-2 px-1 hover:border-red-700"
-        href={`/blog/${card.slug}`}
+        href={`/blog/post/${card.slug}`}
       >
         Read full article
       </a>
