--- a/src/components/Brands.astro
+++ b/src/components/Brands.astro
@@ -27,12 +27,12 @@ const brands = await getCollection("car-brand");
       ></path></svg
     >
   </div>
-  <div id="logo-container" class="flex flex-row gap-10 py-8 scroll-smooth">
+  <div id="logo-container" class="grid grid-flow-col gap-10 py-8 scroll-smooth">
     {
       brands.map((brand) => (
-        <a href={`/brand/${brand.slug}`}>
+        <a class="w-20 h-20" href={`/brand/${brand.slug}`}>
           <img
-            class="grayscale hover:grayscale-0 transition-all duration-500 w-20 h-20"
+            class="grayscale hover:grayscale-0 transition-all duration-500"
             src={brand.data.logo}
             alt={brand.data.title}
           />
@@ -56,16 +56,9 @@ const brands = await getCollection("car-brand");
 </div>
 
 <script lang="js">
-  const brandsContainer = document.getElementById("brands-container");
   const logoContainer = document.getElementById("logo-container");
   const scrollLeft = document.getElementById("scroll-left");
   const scrollRight = document.getElementById("scroll-right");
-
-  const brandsContainerWidth = logoContainer.offsetWidth;
-  const logoContainerWidth = logoContainer.scrollWidth;
-
-  console.log(`brands container width: ${brandsContainerWidth}`);
-  console.log(`logo container width: ${logoContainerWidth}`);
 
   scrollLeft.addEventListener("click", () => {
     logoContainer.scrollLeft -= 160;
