--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -2,7 +2,7 @@
 import TextInput from "./Inputs/TextInput.astro";
 ---
 
-<div class="flex flex-row">
+<div class="flex md:flex-row flex-col">
   <div class="flex flex-col w-1/2 p-6 my-6">
     <div>
       <h2 class="text-center font-semibold text-3xl mb-6">
