--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -32,10 +32,10 @@ for (let i = faqsSize / 2; i < faqsSize; i++) {
 }
 ---
 
-<div>
-  <h2 class="font-semibold text-3xl text-center">{faqs.data.title}</h2>
+<div class="p-6 mt-6">
+  <h2 class="font-semibold text-3xl text-center mb-6">{faqs.data.title}</h2>
   <div class="flex justify-center">
-    <div class="flex lg:flex-row flex-col lg:gap-2 w-3/4 my-20">
+    <div class="flex lg:flex-row flex-col lg:gap-2 w-3/4">
       <div class="flex flex-col">
         <div class="rounded-md">
           {leftFaqArray.map((faq) => <FAQCard card={faq} />)}
