--- a/src/components/LatestNews.astro
+++ b/src/components/LatestNews.astro
@@ -27,12 +27,12 @@ blogPosts.map((post) => {
 });
 ---
 
-<div class="flex flex-col my-24">
+<div class="flex flex-col p-6">
   <div>
-    <h2 class="font-semibold text-3xl text-center">Latest News</h2>
+    <h2 class="font-semibold text-3xl text-center mb-6">Latest News</h2>
   </div>
   <div
-    class="flex w-full lg:flex-row flex-col justify-center items-center gap-4 mt-12 lg:px-16"
+    class="flex w-full lg:flex-row flex-col justify-center items-center gap-4 lg:px-16"
   >
     {cards.map((card) => <NewsCard card={card} />)}
   </div>
