--- a/src/pages/blog/post/[slug].astro
+++ b/src/pages/blog/post/[slug].astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from "astro:content";
 
-import PageLayout from "../../layouts/PageLayout.astro";
+import PageLayout from "../../../layouts/PageLayout.astro";
 
 export async function getStaticPaths() {
   const blogEntries = await getCollection("blog");
