--- a/src/components/FeaturedCars.astro
+++ b/src/components/FeaturedCars.astro
@@ -42,8 +42,10 @@ const newCars = await getEntries(featuredCars.data.newCars);
       </div>
     </div>
     <div class="flex justify-center items-center pt-12">
-      <button class="text-white p-4 px-8 rounded-sm bg-red-700 hover:bg-red-800"
-        >VIEW ALL CARS</button
+      <a
+        href="/fleet"
+        class="text-white p-4 px-8 rounded-sm bg-red-700 hover:bg-red-800 transition"
+        >VIEW ALL CARS</a
       >
     </div>
   </div>
