--- a/src/layouts/HomePageLayout.astro
+++ b/src/layouts/HomePageLayout.astro
@@ -13,7 +13,7 @@ import HomePageNav from "../components/Navigation/HomePageNav";
   </head>
   <body>
     <header>
-      <HomePageNav client:only />
+      <HomePageNav client:only="preact" />
     </header>
     <main>
       <slot />
