--- a/src/pages/cars/[slug].astro
+++ b/src/pages/cars/[slug].astro
@@ -2,7 +2,7 @@
 //@ts-ignore
 import { getCollection } from "astro:content";
 
-import PageLayout from "../../layouts/PageLayout.astro";
+import SecondaryPageLayout from "../../layouts/SecondaryPageLayout.astro";
 
 export async function getStaticPaths() {
   const blogEntries = await getCollection("cars");
@@ -15,8 +15,8 @@ export async function getStaticPaths() {
 const { entry } = Astro.props;
 ---
 
-<PageLayout>
+<SecondaryPageLayout>
   <h1>
     {entry.data.model}
   </h1>
-</PageLayout>
+</SecondaryPageLayout>
