--- a/src/pages/cars/[slug].astro
+++ b/src/pages/cars/[slug].astro
@@ -3,6 +3,7 @@
 import { getCollection } from "astro:content";
 
 import SecondaryPageLayout from "../../layouts/SecondaryPageLayout.astro";
+import CarGalleryCarousel from "../../components/Carousels/CarGalleryCarousel";
 
 export async function getStaticPaths() {
   const blogEntries = await getCollection("cars");
@@ -16,7 +17,10 @@ const { entry } = Astro.props;
 ---
 
 <SecondaryPageLayout>
-  <h1>
-    {entry.data.model}
-  </h1>
+  <div class="pt-24 pb-12">
+    <h1 class="text-center font-semibold text-3xl pb-6">
+      {entry.data.make + " " + entry.data.model}
+    </h1>
+    <CarGalleryCarousel client:load photos={entry.data.galleryImages} />
+  </div>
 </SecondaryPageLayout>
