car gallery carousel rewrite

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,5 +4,7 @@ import SecondaryPageLayout from "../layouts/SecondaryPageLayout.astro";
 ---
 
 <SecondaryPageLayout navLink="about">
-  <AboutUs />
+  <div class="pt-12 h-[85vh]">
+    <AboutUs />
+  </div>
 </SecondaryPageLayout>
