car link update

--- a/src/components/Cards/CarCard.astro
+++ b/src/components/Cards/CarCard.astro
@@ -62,18 +62,14 @@ const link = `/cars/${car.slug}`;
     <div class="flex flex-row w-full">
       <a
         class="flex flex-row gap-2 p-4 bg-red-700 text-white w-1/2 justify-center align-middle hover:bg-red-800 hover:text-gray-50"
-        href="http://"
-        target="_blank"
-        rel="noopener noreferrer"
+        href=`mailto:email@example.com?subject=I am interested in renting ${fullCarName}`
       >
         <Icon class="w-5" name="bi:envelope" />
         <p class="leading-snug">Email</p>
       </a>
       <a
         class="flex flex-row gap-2 p-4 bg-green-700 text-white w-1/2 justify-center align-middle hover:bg-green-800 hover:text-gray-50"
-        href="http://"
-        target="_blank"
-        rel="noopener noreferrer"
+        href=`https://wa.me/13053220522?text=I am interested in renting ${fullCarName}`
       >
         <Icon class="w-5" name="bi:whatsapp" />
         <p class="leading-snug">Whatsapp</p>
