whatsapp links opens in new tab

--- a/src/components/Cards/CarCard.astro
+++ b/src/components/Cards/CarCard.astro
@@ -70,6 +70,7 @@ const link = `/cars/${car.slug}`;
       <a
         class="flex flex-row gap-2 p-4 bg-green-700 text-white w-1/2 justify-center align-middle hover:bg-green-800 hover:text-gray-50"
         href=`https://wa.me/13053220522?text=I am interested in renting ${fullCarName}`
+        target="_blank"
       >
         <Icon class="w-5" name="bi:whatsapp" />
         <p class="leading-snug">Whatsapp</p>
