--- a/src/pages/cars/[slug].astro
+++ b/src/pages/cars/[slug].astro
@@ -92,7 +92,7 @@ const { entry } = Astro.props;
           <a
             class="bg-green-600 hover:bg-green-700 transition text-white text-xl py-3 w-full text-center"
             href=`https://wa.me/13053220522?text=I am interested in renting ${entry.data.make + " " + entry.data.model}`
-            >Whatsapp</a
+            target="_blank">Whatsapp</a
           >
           <a
             class="bg-red-700 hover:bg-red-800 transition text-white text-xl py-3 w-full text-center"
